[metadata]
name = Media-Downloader_for_LINE
version = 1.2.0
author = Dream
long_description = file: README.md

[options]
packages = find:
install_requires =
    pip>=22.3.1
    Flask
    line-bot-sdk
    mutagen
    PyDrive
    oauth2client
    requests
    yt-dlp
    python-dotenv
    httplib2==0.15.0
    

[options.packages.find]
where=line

[tool:pytest]
addopts =
    -v --capture=no
filterwarnings =
    ignore:ssl.PROTOCOL_TLS is deprecated
python_files =
    tests/test_download_to_convert.py